HW14 IS COMPLETED

--- a/hw12_13_14_15_16_calendar/.golangci.yml
+++ b/hw12_13_14_15_16_calendar/.golangci.yml
@@ -34,6 +34,9 @@ issues:
     - path: cmd/.*
       linters:
         - typecheck
+    - path: internal/rabbitmq/.*
+      linters:
+        - typecheck
 
 linters:
   disable-all: true
